--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -1,4 +1,33 @@
 {% extends 'base.html' %}
-{% block title %}Products{% endblock %}
+{% load static %}
+{% block title %}Продукты{% endblock %}
+
 {% block content %}
+<section class="text-gray-400 bg-gray-900 body-font pt-12">
+  <div class="container px-5 mx-auto">
+    <div class="flex flex-wrap -m-4">
+
+      {% for product in products %}
+      <div class="p-4 md:w-1/3 mb-6">
+        <div class="rounded-lg h-64 overflow-hidden">
+          <img src="{{ product.main_image.url }}" alt="{{ product.product_name }}"
+               class="object-cover object-center h-full w-full">
+        </div>
+        <h2 class="text-xl font-medium title-font text-white mt-5">{{ product.product_name }}</h2>
+        <p class="text-base leading-relaxed mt-2 text-gray-300">{{ product.description|truncatechars:100 }}</p>
+        <p class="text-indigo-400 mt-2 font-bold">Цена: {{ product.price }} ₽</p>
+        <a class="text-indigo-400 inline-flex items-center mt-3" href="#">Подробнее
+          <svg fill="none" stroke="currentColor" stroke-linecap="round"
+               stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2"
+               viewBox="0 0 24 24">
+            <path d="M5 12h14M12 5l7 7-7 7"/>
+          </svg>
+        </a>
+      </div>
+      {% endfor %}
+
+    </div>
+  </div>
+</section>
+{% endblock %}
 
