--- a/templates/header/company.html
+++ b/templates/header/company.html
@@ -1,3 +1,32 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}О компании{% endblock %}
+
+{% block content %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% endblock %}
