--- a/templates/products/brands.html
+++ b/templates/products/brands.html
@@ -11,11 +11,12 @@
     <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
       <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
         <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src=" ">
+          <img alt="content" class="object-cover object-center h-full w-full" src="{% static 'image/contract.png' %}">
         </div>
-        <h2 class="text-xl font-medium title-font text-white mt-5">Shooting Stars</h2>
-        <p class="text-base leading-relaxed mt-2">Swag shoindxgoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-        <a class="text-indigo-400 inline-flex items-center mt-3">Learn More
+        <h2 class="text-xl font-medium title-font text-white mt-5">Договора</h2>
+        <p class="text-base leading-relaxed mt-2">Договор на поставку товарного бетона</p>
+        <p class="text-base leading-relaxed mt-2">Договор на поставку ЖБИ</p>
+        <a class="text-indigo-400 inline-flex items-center mt-3" href="{% url 'documents' %}">Подробнее
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
           </svg>
@@ -23,11 +24,11 @@
       </div>
       <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
         <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src=" ">
+          <img alt="content" class="object-cover object-center h-full w-full" src="{% static 'image/IMG_20230921_184052.jpg' %}">
         </div>
-        <h2 class="text-xl font-medium title-font text-white mt-5">The Catalyzer</h2>
-        <p class="text-base leading-relaxed mt-2">Swag shoindxigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-        <a class="text-indigo-400 inline-flex items-center mt-3">Learn More
+        <h2 class="text-xl font-medium title-font text-white mt-5">Фото и видео производства</h2>
+        <p class="text-base leading-relaxed mt-2">Фотографии и видеоматериалы с производства а также наше итальянское оборудование</p>
+        <a class="text-indigo-400 inline-flex items-center mt-3" href="{% url 'media' %}">Подробнее
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
           </svg>
@@ -35,11 +36,11 @@
       </div>
       <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
         <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src=" ">
+          <img alt="content" class="object-cover object-center h-full w-full" src="{% static 'image/IMG_0977.jpg' %}">
         </div>
-        <h2 class="text-xl font-medium title-font text-white mt-5">The 400 Blows</h2>
-        <p class="text-base leading-relaxed mt-2">Swag shoindegoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-        <a class="text-indigo-400 inline-flex items-center mt-3">Learn More
+        <h2 class="text-xl font-medium title-font text-white mt-5">Плиты ПП</h2>
+        <p class="text-base leading-relaxed mt-2">Плита перекрытия колодца — это железобетонное изделие, которое устанавливается на верхнюю часть колодца для защиты, прочности и установки люка. Используется в водопроводных, канализационных и дренажных системах.</p>
+        <a class="text-indigo-400 inline-flex items-center mt-3" href="{% url 'product_list' 1 %}">Подробнее
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
           </svg>
@@ -51,20 +52,17 @@
 
 
 
-
-
-
 <section class="text-gray-400 bg-gray-900 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col">
     <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
       <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
         <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src=" ">
+          <img alt="content" class="object-cover object-center h-full w-full" src="{% static 'image/IMG_0546.jpg' %}">
         </div>
-        <h2 class="text-xl font-medium title-font text-white mt-5">Shooting Stars</h2>
-        <p class="text-base leading-relaxed mt-2">Swag shoindxgoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-        <a class="text-indigo-400 inline-flex items-center mt-3">Learn More
+        <h2 class="text-xl font-medium title-font text-white mt-5">Плиты ПБ</h2>
+        <p class="text-base leading-relaxed mt-2">Плиты ПБ — это предварительно напряжённые пустотные железобетонные плиты, предназначенные для устройства перекрытий в жилых, коммерческих и промышленных зданиях. Изготавливаются методом непрерывного формования и обладают высокой прочностью, геометрической точностью и длительным сроком службы.</p>
+        <a class="text-indigo-400 inline-flex items-center mt-3" href="{% url 'product_list' 2 %}">Подробнее
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
           </svg>
@@ -72,11 +70,11 @@
       </div>
       <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
         <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src=" ">
+          <img alt="content" class="object-cover object-center h-full w-full" src="{% static 'image/2020-09-17 18-26-41.jpg' %}">
         </div>
-        <h2 class="text-xl font-medium title-font text-white mt-5">The Catalyzer</h2>
-        <p class="text-base leading-relaxed mt-2">Swag shoindxigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-        <a class="text-indigo-400 inline-flex items-center mt-3">Learn More
+        <h2 class="text-xl font-medium title-font text-white mt-5">Колодцы</h2>
+        <p class="text-base leading-relaxed mt-2">Колодцы — вертикальные шахты из бетонных колец или других материалов, предназначенные для доступа к подземным коммуникациям (водопровод, канализация, дренаж). Обеспечивают обслуживание, ремонт и защиту инженерных сетей.</p>
+        <a class="text-indigo-400 inline-flex items-center mt-3" href="{% url 'product_list' 3 %}">Подробнее
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
           </svg>
@@ -84,11 +82,11 @@
       </div>
       <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
         <div class="rounded-lg h-64 overflow-hidden">
-          <img alt="content" class="object-cover object-center h-full w-full" src=" ">
+          <img alt="content" class="object-cover object-center h-full w-full" src="{% static 'image/IMG_0650.JPG' %}">
         </div>
-        <h2 class="text-xl font-medium title-font text-white mt-5">The 400 Blows</h2>
-        <p class="text-base leading-relaxed mt-2">Swag shoindegoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
-        <a class="text-indigo-400 inline-flex items-center mt-3">Learn More
+        <h2 class="text-xl font-medium title-font text-white mt-5">Лего блоки</h2>
+        <p class="text-base leading-relaxed mt-2">Бетонные лего блоки — крупноформатные бетонные блоки с выступами и пазами для надежного соединения между собой, применяются для строительства стен и фундаментов. Обеспечивают прочность, устойчивость и облегчают монтаж благодаря системе «шип-паз».</p>
+        <a class="text-indigo-400 inline-flex items-center mt-3" href="{% url 'product_list' 4 %}">Подробнее
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
           </svg>
