--- a/templates/header/article.html
+++ b/templates/header/article.html
@@ -4,20 +4,16 @@
 
 {% block content %}
 
-<div class="bg-gray-900 min-h-screen py-12 px-4 sm:px-6 lg:px-8 space-y-12">
+<div class="bg-gray-100 min-h-screen py-12 px-4 sm:px-6 lg:px-8 space-y-6">
   {% for article in articles %}
-  <section class="bg-gray-800 rounded-lg shadow-lg overflow-hidden w-full">
-    <div class="flex flex-col md:flex-row items-center max-w-7xl mx-auto px-5 py-12">
-      <div class="md:w-1/2 w-full mb-10 md:mb-0 flex justify-center">
-        <img class="object-cover object-center rounded" alt="{{ article.title }}" src="{{ article.image.url }}" style="width: 400px; height: 400px;">
-      </div>
-      <div class="md:w-1/2 w-full md:pl-16 text-center md:text-left">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-semibold text-white">{{ article.title }}</h1>
-        <p class="leading-relaxed text-gray-300 whitespace-pre-line">{{ article.content }}</p>
-      </div>
-    </div>
-  </section>
+    <section class="bg-white rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300 p-6 w-full">
+      <a href="{{ article.link }}" target="_blank" class="text-blue-600 hover:text-blue-800 text-xl font-medium">
+        {{ article.title }}
+      </a>
+    </section>
   {% endfor %}
 </div>
+
+
 
 {% endblock %}
