--- a/templates/header/contact.html
+++ b/templates/header/contact.html
@@ -2,7 +2,7 @@
 {% block title %}Контакты{% endblock %}
 {% block content %}
 
-<section class="w-full bg-gray-900 text-gray-400 body-font">
+<section class="w-full bg-[#DDE6ED] text-white body-font">
   <div class="flex flex-wrap lg:flex-nowrap w-full">
     
     <!-- Карта -->
@@ -23,26 +23,26 @@
     <!-- Информация и форма -->
     <div class="w-full lg:w-1/3 flex flex-col justify-start p-8 space-y-8">
       <!-- Информация -->
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md">
-        <h2 class="text-white text-sm font-semibold mb-2">Адрес</h2>
-        <p class="text-gray-300 mb-4">230903, Узбекистан, Республика Каракалпакстан, г.Нукус, поселок Кызкеткен Южная пром.зона</p>
+      <div class="bg-[#B9B4C7] p-6 rounded-lg shadow-md">
+        <h2 class="text-dark text-sm font-semibold mb-2">Адрес</h2>
+        <p class="text-dark mb-4">230903, Узбекистан, Республика Каракалпакстан, г.Нукус, поселок Кызкеткен Южная пром.зона</p>
 
-        <h2 class="text-white text-sm font-semibold mb-2">Email</h2>
-        <p class="text-indigo-400 mb-4">nukusbeton@mail.ru</p>
+        <h2 class="text-dark text-sm font-semibold mb-2">Email</h2>
+        <p class="text-dark mb-4">nukusbeton@mail.ru</p>
 
-        <h2 class="text-white text-sm font-semibold mb-2">Телефон</h2>
-        <p class="text-gray-300">+998 91 261 00 01</p>
-        <p class="text-gray-300">+998 93 921 01 11</p>
+        <h2 class="text-dark text-sm font-semibold mb-2">Телефон</h2>
+        <p class="text-dark">+998 91 261 00 01</p>
+        <p class="text-dark">+998 93 921 01 11</p>
       </div>
 
       <!-- Обратная связь -->
-      <div class="bg-gray-800 p-6 rounded-lg shadow-md">
-        <h2 class="text-white text-lg font-medium mb-4">Обратная связь</h2>
+      <div class="bg-[#B9B4C7] p-6 rounded-lg shadow-md">
+        <h2 class="text-dark text-lg font-medium mb-4">Обратная связь</h2>
         <form method="post">
           {% csrf_token %}
 
           <div class="mb-4">
-            <label for="id_name" class="text-sm text-gray-400">Имя</label>
+            <label for="id_name" class="text-sm text-dark">Имя</label>
             {{ form.name }}
             {% if form.name.errors %}
               <p class="text-red-500 text-sm mt-1">{{ form.name.errors.0 }}</p>
@@ -50,7 +50,7 @@
           </div>
 
           <div class="mb-4">
-            <label for="id_phone" class="text-sm text-gray-400">Телефон</label>
+            <label for="id_phone" class="text-sm text-dark">Телефон</label>
             {{ form.phone }}
             {% if form.phone.errors %}
               <p class="text-red-500 text-sm mt-1">{{ form.phone.errors.0 }}</p>
@@ -58,7 +58,7 @@
           </div>
 
           <div class="mb-4">
-            <label for="id_email" class="text-sm text-gray-400">Email</label>
+            <label for="id_email" class="text-sm text-dark">Email</label>
             {{ form.email }}
             {% if form.email.errors %}
               <p class="text-red-500 text-sm mt-1">{{ form.email.errors.0 }}</p>
@@ -66,7 +66,7 @@
           </div>
 
           <div class="mb-4">
-            <label for="id_object_name" class="text-sm text-gray-400">Название объекта</label>
+            <label for="id_object_name" class="text-sm text-dark">Название объекта</label>
             {{ form.object_name }}
             {% if form.object_name.errors %}
               <p class="text-red-500 text-sm mt-1">{{ form.object_name.errors.0 }}</p>
@@ -74,22 +74,22 @@
           </div>
 
           <div class="mb-4">
-            <label for="id_project_location" class="text-sm text-gray-400">Местоположение проекта</label>
+            <label for="id_project_location" class="text-sm text-dark">Местоположение проекта</label>
             {{ form.project_location }}
             {% if form.project_location.errors %}
-              <p class="text-red-500 text-sm mt-1">{{ form.project_location.errors.0 }}</p>
+              <p class="text-dark text-sm mt-1">{{ form.project_location.errors.0 }}</p>
             {% endif %}
           </div>
 
           <div class="mb-4">
-            <label for="id_message" class="text-sm text-gray-400">Сообщение</label>
+            <label for="id_message" class="text-sm text-dark">Сообщение</label>
             {{ form.message }}
             {% if form.message.errors %}
               <p class="text-red-500 text-sm mt-1">{{ form.message.errors.0 }}</p>
             {% endif %}
           </div>
 
-          <button type="submit" class="bg-indigo-500 hover:bg-indigo-600 text-white py-2 px-4 rounded">
+          <button type="submit" class="bg-[#526D82] hover:bg-[#27374D] text-white py-2 px-4 rounded">
             Отправить
           </button>
         </form>
