Добавил requirements.txt

--- a/templates/header/contact.html
+++ b/templates/header/contact.html
@@ -28,7 +28,7 @@
         <p class="text-dark mb-4">230903, Узбекистан, Республика Каракалпакстан, г.Нукус, поселок Кызкеткен Южная пром.зона</p>
 
         <h2 class="text-dark text-sm font-semibold mb-2">Email</h2>
-        <p class="text-dark mb-4">nukusbeton@mail.ru</p>
+        <p class="text-dark mb-4">info@nukusbeton.uz</p>
 
         <h2 class="text-dark text-sm font-semibold mb-2">Телефон</h2>
         <p class="text-dark">+998 91 261 00 01</p>
